2005-09-29  Timothy Hatcher  <timothy@apple.com>

        Merged fix from TOT to Safari-2-0-branch

    2005-10-03  Tim Omernick  <tomernick@apple.com>

        Reviewed by John Sullivan.

		<rdar://problem/4281095> Denver regression: Seed: Safari HTML 4.01 <object ...> tag problem

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge determineObjectFromMIMEType:URL:]):
		If no view class is registered to handle the MIME type, check to see if there is a plugin registered which can handle it.
		This check is required because the Java plugin does not register an NSView class, so that Java files are downloaded when
		not embedded.
	
		Prior to this fix, -determineObjectFromMIMEType:URL: would always return ObjectElementNone for Java applets (MIME type
		"application/x-java-applet"), which would cause Java applets embedded in <OBJECT> elements to not be loaded.
	
		This broke on 05-03-2005, when we changed how we handle fallback content for <OBJECT> elements so that we could pass the
		Acid2 test.

=== WebKit-417.1 ===

2005-09-29  Timothy Hatcher  <timothy@apple.com>

        Merged fix from TOT to Safari-2-0-branch

    2005-09-28  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by geoff
        
        Fixed <rdar://problem/4276596> multipart/x-mixed-replace: saved inline images appear only partially loaded
        Fixed <rdar://problem/4265439> progress bar should look complete even if there is some more multipart content being loaded

        * WebCoreSupport.subproj/WebSubresourceLoader.h:
        * WebCoreSupport.subproj/WebSubresourceLoader.m:
        (-[WebSubresourceLoader didReceiveResponse:]):
        Now calls signalFinish and saveResource.
        
        (-[WebSubresourceLoader signalFinish]): 
        Added.  Does the part of didFinishLoading that signals to the WebDataSource and load delegates that the load is finished.
        
        (-[WebSubresourceLoader didFinishLoading]):
        * WebView.subproj/WebLoader.h: